WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
294031
[macOS] Unified field incorrectly gets focused if you click on a bookmark from the favorites bar
https://bugs.webkit.org/show_bug.cgi?id=294031
Summary
[macOS] Unified field incorrectly gets focused if you click on a bookmark fro...
Wenson Hsieh
Reported
2025-06-04 09:33:19 PDT
rdar://152196672
Attachments
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2025-06-04 09:34:47 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/46328
EWS
Comment 2
2025-06-04 12:15:59 PDT
Committed
295828@main
(985743a6f41c): <
https://commits.webkit.org/295828@main
> Reviewed commits have been landed. Closing PR #46328 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug