[macOS] Unified field incorrectly gets focused if you click on a bookmark from the favorites bar https://bugs.webkit.org/show_bug.cgi?id=294031 rdar://152196672

Reviewed by Abrar Rahman Protyasha, Aditya Keerthi, and Megan Gardner.

Add a new method declaration; see the corresponding paired change for more details.

* Source/WebKit/UIProcess/API/mac/WKWebViewMac.mm:
(-[WKWebView _setUsesAutomaticContentInsetBackgroundFill:]):
* Source/WebKit/UIProcess/mac/WebViewImpl.h:

Canonical link: https://commits.webkit.org/295828@main